<resources>
    <string name="app_name" translatable="false">TicTacToe</string>
    <string name="login_name">Login</string>
    <string name="signIn_name">Sign In</string>
    <string name="username_name">Username</string>
    <string name="passwd_name">Password</string>
    <string name="sign_user">new Username</string>
    <string name="sign_pw1">enter Password</string>
    <string name="sign_pw2">confirm Password</string>
    <string name="sign_btn">SIGN UP</string>
    <string name="cancel">Cancel</string>
    <string name="sing_btn">Singleplayer</string>
    <string name="multi_btn">Multiplayer</string>
    <string name="multi_web_btn">Multiplayer Web</string>
    <string name="help_btn">Help</string>
    <string name="highscore_btn">HighScore</string>
    <string name="logout_btn">Logout</string>
</resources>
