<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lea.tictactoe.StartScreen">

    <Button
        android:id="@+id/b_help"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/help_btn"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/b_single"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/b_highscore"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/highscore_btn"
        app:layout_constraintRight_toLeftOf="@+id/b_logout"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/b_help"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/b_logout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/logout_btn"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/b_single"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/b_single"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorAccent"
        android:text="@string/sing_btn"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/b_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_multi"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorAccent"
        android:text="@string/multi_btn"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/b_multi_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_multi_web"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginBottom="120dp"
        android:background="@color/colorAccent"
        android:text="@string/multi_web_btn"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
