<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/chalkboard_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lea.tictactoe.SignUp">

    <EditText
        android:id="@+id/t_reg_username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/sign_user"
        android:inputType="textPersonName"
        android:shadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/t_reg_passwd1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/sign_pw1"
        android:shadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="59dp"
        app:layout_constraintTop_toBottomOf="@+id/t_reg_username" />

    <EditText
        android:id="@+id/t_reg_passwd2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/sign_pw2"
        android:inputType="textPassword"
        android:shadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/t_reg_passwd1" />

    <Button
        android:id="@+id/b_signup"
        android:layout_width="132dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/sign_btn"/>

    <Button
        android:id="@+id/b_cancel"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="42dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
