<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="1"
    android:layout_row="3"
    android:background="@drawable/chalkboard_new"
    tools:context="com.example.lea.tictactoe.MainWindow">


    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/username_name"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textColorLink="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="73dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/passwd_name"
        android:inputType="textPassword"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textColorLink="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="78dp"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginStart="59dp"
        android:text="@string/login_name"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="59dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/signInButton"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/passwd"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:text="@string/signIn_name"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="60dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="148dp" />

</android.support.constraint.ConstraintLayout>
