<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.lea.tictactoe.LogIn"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="16dp">

    <EditText
        android:id="@+id/t_username"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/username_name"
        android:inputType="textPersonName"
        android:shadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/t_passwd"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/passwd_name"
        android:inputType="textPassword"
        android:shadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_username" />

    <Button
        android:id="@+id/b_signup"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_btn"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_login"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:text="@string/login_name"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/b_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>
