<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:layout_column="1"
    android:layout_row="3"
    android:background="@drawable/chalkboard_new"
    tools:context="com.example.lea.tictactoe.signin">

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/sign_user"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textColorLink="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="115dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <EditText
        android:id="@+id/passwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/sign_pw1"
        android:inputType="textPassword"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textColorLink="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.502" />

    <EditText
        android:id="@+id/passwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/sign_pw2"
        android:inputType="textPassword"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textColorLink="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="141dp"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/button2"
        android:layout_width="217dp"
        android:layout_height="52dp"
        tools:layout_constraintRight_creator = "1"
        app:layout_constraintRight_toBottomOf = "parent"
        app:layout_constraintRight_toRightOf = "parent"
        android:text="@string/sign_btn"
        android:layout_marginRight="70dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/passwd2" />


</android.support.constraint.ConstraintLayout>
